--- a/Source/IntegrationTests/IntegrationTests.csproj
+++ b/Source/IntegrationTests/IntegrationTests.csproj
@@ -46,7 +46,7 @@
     <Reference Include="Microsoft.VisualStudio.Shell.$(VisualStudioVersion), Version=$(VisualStudioVersion).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <!-- Shell.11 already contains the Settings assembly -->
     <Reference Condition="$(Vs10)" Include="Microsoft.VisualStudio.Settings, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-        <Visible>$(Vs10)</Visible>
+      <Visible>$(Vs10)</Visible>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -70,6 +70,7 @@
     <Compile Include="CommandsSpec.cs" />
     <Compile Include="DevEnvSpec.cs" />
     <Compile Include="HostingSpec.cs" />
+    <Compile Include="IntegrationPackageSpec.cs" />
     <Compile Include="MessageBoxServiceSpec.cs" />
     <Compile Include="netfx\Testing\Assertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
