--- a/Source/Clide/Clide.csproj
+++ b/Source/Clide/Clide.csproj
@@ -222,4 +222,5 @@
     <Copy SourceFiles="@(SymbolSource)" DestinationFiles="@(SymbolSource->'nuget\src\%(RecursiveDir)%(Filename)%(Extension)')" ContinueOnError="false" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
     <Copy SourceFiles="$(OutDir)$(TargetName).*" DestinationFolder="nuget\lib\$(NugetTarget)\" />
   </Target>
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
 </Project>
