--- a/Source/Clide/Clide.nuspec
+++ b/Source/Clide/Clide.nuspec
@@ -10,7 +10,7 @@
         <projectUrl>http://clarius.io/clide</projectUrl>
         <iconUrl>http://clarius.io/clide-48x48</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Provides high-level, composable and testable APIs for working with Visual Studio.</description>
+        <description>High-level, composable and testable APIs for working with Visual Studio.</description>
         <releaseNotes>Initial release of the APIs.</releaseNotes>
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
