--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ init:
   - git config --global core.autocrlf input
 
 build_script:
-  - cmd: build.cmd /t:build,package,install
+  - cmd: build.cmd "/t:build,package,install"
 
 test:
   assemblies:
